Fix clickable elements too close together

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -56,7 +56,7 @@ body
     font-weight 700
 
   details
-    margin -3.5rem 0 0 0
+    margin -3rem 0 0 0
     &[open]
       > :last-child
         margin-bottom 3rem
